--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,28 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP&display=swap" rel="stylesheet">
+
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <h1>ブックマーク共有システム</h1>
-        <form name="userInputForm" id="userInputForm" action="#" method="get">
+        <form name="userInputForm" id="userInputForm" action="register.php" method="get">
             サイト名: <input name="inputSitename" id="inputSitename" type="text" size="40" required><br>
-            URL: <input name="inputURL" id="inputURL" type="text" size="40" placeholder="https://example.com" required><br>
+            URL: <input name="inputURL" id="inputURL" type="url" size="40" placeholder="https://example.com" required><br>
             ジャンル名: <select name="selectGenre" id="selectGenre">
                 <option value="">* 選択してください *</option>
-                <option value="genreNews">ニュース</option>
-                <option value="genreMusic">音楽</option>
-                <option value="genreBook">本</option>
-                <option value="genreTravel">旅行</option>
-                <option value="genreProgramming">プログラミング</option>
-                <option value="genreShopping">買い物</option>
-                <option value="genreOther">そのほか</option>
+                <option value="ニュース">ニュース</option>
+                <option value="音楽">音楽</option>
+                <option value="本">本</option>
+                <option value="旅行">旅行</option>
+                <option value="プログラミング">プログラミング</option>
+                <option value="買い物">買い物</option>
+                <option value="そのほか">そのほか</option>
             </select><br><br>
 
             <div id="userInputFormButtons">
-                <input type="button" name="buttonRegister" id="buttonRegister" value="登録" onclick="registerBookmark()">
+                <input type="button" name="buttonRegister" id="buttonRegister" value="登録" onclick="hasInputValue()">
                 <input type="button" name="buttonViewer" id="buttonViewer" value="表示">
             </div>
         </form>
