--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP&display=swap" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+        <script src="lib/index.js"></script>
     </head>
     <body>
         <h1>ブックマーク共有システム</h1>
