feat: Add viewer feature

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
             <div id="userInputFormButtons">
                 <input type="button" name="buttonRegister" id="buttonRegister" value="登録" onclick="hasInputValue()">
-                <input type="button" name="buttonViewer" id="buttonViewer" value="表示">
+                <input type="button" name="buttonViewer" id="buttonViewer" value="表示" onclick="window.location.href='viewer.php'">
             </div>
         </form>
     </body>
